// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedBackdrop component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="root-0-2-4"
    style="--blur: 0px;"
  >
    <span
      style="height: 0px; width: 0px;"
    />
    <span
      style="height: 0px; width: 0px;"
    />
    <span
      style="height: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`AnimatedBackdrop component matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="root-0-2-8 test"
    style="--blur: 0px;"
  >
    <span
      style="height: 0px; width: 0px;"
    />
    <span
      style="height: 0px; width: 0px;"
    />
    <span
      style="height: 0px; width: 0px;"
    />
  </div>
</DocumentFragment>
`;
